operator/pkg/gateway-api/testdata/gateway/gateway-mixed-http-tcp/output/gateway-mixed.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-mixed
  namespace: gateway-conformance-infra
  resourceVersion: "1000"
spec:
  gatewayClassName: cilium
  listeners:
  - allowedRoutes:
      kinds:
      - kind: HTTPRoute
      namespaces:
        from: Same
    name: http
    port: 80
    protocol: HTTP
  - allowedRoutes:
      kinds:
      - kind: TCPRoute
      namespaces:
        from: Same
    name: tcp
    port: 3000
    protocol: TCP
status:
  conditions:
  - lastTransitionTime: "2026-06-05T07:01:22Z"
    message: Gateway successfully scheduled
    reason: Accepted
    status: "True"
    type: Accepted
  - lastTransitionTime: "2026-06-05T07:01:22Z"
    message: Gateway waiting for address
    reason: AddressNotAssigned
    status: "False"
    type: Programmed
  listeners:
  - attachedRoutes: 1
    conditions:
    - lastTransitionTime: "2026-06-05T07:01:22Z"
      message: Resolved Refs
      reason: ResolvedRefs
      status: "True"
      type: ResolvedRefs
    - lastTransitionTime: "2026-06-05T07:01:22Z"
      message: Listener Accepted
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: "2026-06-05T07:01:22Z"
      message: Address not ready yet
      reason: Pending
      status: "False"
      type: Programmed
    name: http
    supportedKinds:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
  - attachedRoutes: 1
    conditions:
    - lastTransitionTime: "2026-06-05T07:01:22Z"
      message: Resolved Refs
      reason: ResolvedRefs
      status: "True"
      type: ResolvedRefs
    - lastTransitionTime: "2026-06-05T07:01:22Z"
      message: Listener Accepted
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: "2026-06-05T07:01:22Z"
      message: Address not ready yet
      reason: Pending
      status: "False"
      type: Programmed
    name: tcp
    supportedKinds:
    - group: gateway.networking.k8s.io
      kind: TCPRoute
