operator/pkg/gateway-api/testdata/gateway/gateway-mixed-http-tcp/output/httproute-mixed-http.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mixed-http
  namespace: gateway-conformance-infra
  resourceVersion: "1000"
spec:
  parentRefs:
  - name: gateway-mixed
    namespace: gateway-conformance-infra
    sectionName: http
  rules:
  - backendRefs:
    - name: infra-backend-v1
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /
status:
  parents:
  - conditions:
    - lastTransitionTime: "2026-06-05T07:01:22Z"
      message: Accepted HTTPRoute
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: "2026-06-05T07:01:22Z"
      message: Service reference is valid
      reason: ResolvedRefs
      status: "True"
      type: ResolvedRefs
    controllerName: io.cilium/gateway-controller
    parentRef:
      name: gateway-mixed
      namespace: gateway-conformance-infra
      sectionName: http
